# world-cup-predictor

./: .flake8  .gitattributes  .gitignore  README.md  init_project.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/reference/: example_match.csv  wc2026_groups.csv  wc2026_knockout_r32.csv
notebooks/: 01_eda.ipynb  02_features.ipynb  03_models.ipynb  04_simulation.ipynb  05_visualization.ipynb
scripts/: refresh_all.py  update_pipeline.py
src/worldcup/: __init__.py  config.py
src/worldcup/data/: __init__.py  download.py  load.py  schema.py  teams.py  wc2026.py
src/worldcup/features/: __init__.py  build.py  elo.py
src/worldcup/models/: __init__.py  baseline.py  calibration.py  dixon_coles.py  poisson.py  xgboost_model.py
src/worldcup/simulation/: __init__.py  knockout.py  predictions.py  simulator.py
src/worldcup/visualization/: __init__.py  plots.py
tests/: test_baseline.py  test_calibration.py  test_dashboard.py  test_data_load.py  test_dixon_coles.py  test_elo.py  test_features.py  test_knockout.py  test_plots.py  test_poisson.py  test_predictions.py  test_simulator.py  test_smoke.py  test_wc2026.py  test_xgboost.py
