[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "A dynamic FIFA World Cup prediction system: Elo + ML + Monte Carlo simulation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Achraf Berbaoui", email = "berbaouiachraf@gmail.com" }]

# Runtime deps are managed via requirements.txt for reproducibility;
# this section keeps the package metadata minimal and installable.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

# ── Tooling configuration (so the whole team uses identical settings) ───────────
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
